syntax = "proto3";

message Person {
string name = 1;
int32  age  = 2; 
};

service AddressBookService {
    // add a person to address book.
    rpc AddPerson (Person) returns (Person);
    
    // get a person from their name
    rpc GetPersonByName (GetPersonByNameRequest) returns (Person);
};

message GetPersonByNameRequest{
    string name = 1;
};